Migrate mlp dependency reference to new org

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,11 +8,11 @@
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@babel/runtime": "7.19.0",
+    "@caraml-dev/ui-lib": "^1.7.5-build.5-59f13e1",
     "@elastic/datemath": "5.0.3",
     "@elastic/eui": "64.0.0",
     "@emotion/cache": "11.10.3",
     "@emotion/react": "^11.9.0",
-    "@gojek/mlp-ui": "1.7.0",
     "@monaco-editor/react": "4.4.5",
     "@sentry/browser": "5.15.5",
     "@types/react": "^17.0.0",
