Replace ghcr_token with regular github token

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -518,4 +518,4 @@ jobs:
     secrets:
       pypi_username: ${{ secrets.PYPI_USERNAME }}
       pypi_password: ${{ secrets.PYPI_PASSWORD }}
-      ghcr_token: ${{ secrets.GHCR_TOKEN }}
+      ghcr_token: ${{ secrets.GITHUB_TOKEN }}
