--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/build-push-action@v1
         with:
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           repository: caraml-dev/mlflow
           path: mlflow
