Set permissions granted to the github token manually

--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   publish-mlflow-docker:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v2
       - name: Build and push MLflow Docker image
