--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,9 @@ jobs:
 
   publish-api:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
@@ -58,6 +61,9 @@ jobs:
 
   publish-transformer:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
@@ -125,6 +131,9 @@ jobs:
 
   publish-inference-logger:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
