Fix mlflow ingress class; Remove knative-webhook resource limit

--- a/scripts/e2e/values-e2e.yaml
+++ b/scripts/e2e/values-e2e.yaml
@@ -107,7 +107,7 @@ mlflow:
       memory: 64Mi
   ingress:
     enabled: true
-    class: "nginx"
+    class: istio
     path: /
   extraEnvs:
     AWS_ACCESS_KEY_ID: YOURACCESSKEY
