Fix mlflow artifactRoot

--- a/scripts/e2e/values-e2e.yaml
+++ b/scripts/e2e/values-e2e.yaml
@@ -105,6 +105,7 @@ mlflow:
     requests:
       cpu: 25m
       memory: 64Mi
+  artifactRoot: s3://mlflow
   ingress:
     enabled: true
     class: istio
