Replace manually set GHCR_TOKEN with autogenerated GITHUB_TOKEN (#390)
**What this PR does / why we need it**:
This PR updates the GitHub actions files to remove the use of the
`GHCR_TOKEN` that's manually set up in the repository to validate all
container pushes to the GitHub registry, and instead replace it with the
autogenerated `GITHUB_TOKEN`
[secret](https://docs.github.com/en/actions/security-guides/automatic-token-authentication#about-the-github_token-secret).

Unfortunately, even after giving all the relevant permissions to the
Merlin repo (to publish to the `caraml-dev` packages) as well as giving
the `GITHUB_TOKEN` the necessary
[rights](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/enabling-features-for-your-repository/managing-github-actions-settings-for-a-repository#configuring-the-default-github_token-permissions)
to have write permissions to the `packages` scope, we are still unable
to publish all the existing images to their respective locations just by
changing the `GHCR_TOKEN` to the `GITHUB_TOKEN`.

In particular, for images that are pushed to a path that doesn't have
`merlin/` as a subpath like:
- `ghcr.io/caraml-dev/merlin`
- `ghcr.io/caraml-dev/merlin-transformer`
- `ghcr.io/caraml-dev/merlin-logger` 
- `ghcr.io/caraml-dev/mlflow`

we'll need to explicitly
[specify](https://docs.github.com/en/packages/managing-github-packages-using-github-actions-workflows/publishing-and-installing-a-package-with-github-actions#publishing-a-package-using-an-action)
the write permissions in the GitHub action where we're pushing the
Docker image to the GitHub registry:

```yaml
  publish-inference-logger:
    ...
    permissions:
      packages: write
    steps:
      ...
      - name: Retag and Push Docker Image
        run: |
          ...
          docker push ${IMAGE_TAG}
```

For some reason GitHub doesn't recognise packages with those paths as
belonging to the Merlin reposito

--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -8,13 +8,15 @@ on:
 jobs:
   publish-mlflow-docker:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v2
       - name: Build and push MLflow Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           repository: caraml-dev/mlflow
           path: mlflow
