Update resource for webhook-server

--- a/scripts/e2e/config/kserve/overlay.yaml
+++ b/scripts/e2e/config/kserve/overlay.yaml
@@ -20,8 +20,16 @@ spec:
               cpu: ~
               memory: 300Mi
             requests:
-              cpu: 100m
+              cpu: 300m
               memory: 64Mi
+        - name: webhook-server
+          resources:
+            limits:
+              cpu: ~
+              memory: 400Mi
+            requests:
+              cpu: 300m
+              memory: 200Mi
 ---
 apiVersion: v1
 kind: ConfigMap
