--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -356,6 +356,24 @@ jobs:
           path: merlin-logger.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
+  publish-python-sdk-docker:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+    needs:
+      - create-version
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build Merlin SDK Docker py${{ matrix.python-version }}
+        working-directory: ./python/sdk
+        run: |
+          IMAGE_TAG="ghcr.io/caraml-dev/merlin-sdk:${{ needs.create-version.outputs.version }}"
+          SDK_VERSION="$(sed 's/^v\(.*\)-/\1/' <<< "v0.29.0-rc1")"
+          docker build -t ${IMAGE_TAG} --build-arg PYTHON_VERSION=${matrix.python-version} --VERSION=${SDK_VERSION} .
+          docker push ${IMAGE_TAG}
+
   e2e-test:
     runs-on: ubuntu-latest
     needs:
