refactor: add config for artifact type

--- a/scripts/e2e/values-e2e.yaml
+++ b/scripts/e2e/values-e2e.yaml
@@ -99,6 +99,7 @@ merlin-postgresql:
     enabled: false
 mlflow:
   trackingURL: "http://merlin-mlflow"
+  artifactServiceType: "nop"
   resources:
     requests:
       cpu: 25m
