Add step to login to ghcr.io first

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -371,6 +371,7 @@ jobs:
         run: |
           IMAGE_TAG="ghcr.io/caraml-dev/merlin-sdk:${{ needs.create-version.outputs.version }}"
           SDK_VERSION="$(sed 's/^v\(.*\)-/\1/' <<< "v0.29.0-rc1")"
+          docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
           docker build -t ${IMAGE_TAG} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg VERSION=${SDK_VERSION} .
           docker push ${IMAGE_TAG}
 
