--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,24 +41,24 @@ jobs:
           python setup.py sdist bdist_wheel
           twine upload dist/*
 
-  # publish-python-sdk-docker:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       python-version: ["3.7", "3.8", "3.9", "3.10"]
-  #   # needs:
-  #   #   - publish-python-sdk
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Build Merlin SDK Docker py${{ matrix.python-version }}
-  #       working-directory: ./python/sdk
-  #       run: |
-  #         IMAGE_TAG="${{ env.DOCKER_REGISTRY }}/caraml-dev/merlin-sdk:${{ inputs.version }}"
-  #         SDK_VERSION="$(sed 's/^v\(.*\)-/\1/' <<< "v0.29.0-rc1")"
-  #         docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
-  #         docker build -t ${IMAGE_TAG} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg VERSION=${SDK_VERSION} .
-  #         docker push ${IMAGE_TAG}
+  publish-python-sdk-docker:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+    needs:
+      - publish-python-sdk
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build Merlin SDK Docker py${{ matrix.python-version }}
+        working-directory: ./python/sdk
+        run: |
+          IMAGE_TAG="ghcr.io/caraml-dev/merlin-sdk:py${{ matrix.python-version }}-${{ inputs.version }}"
+          SDK_VERSION="$(sed 's/^v\(.*\)-/\1/' <<< "${{ inputs.version }}")"
+          docker login ${{ env.DOCKER_REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.ghcr_token }}
+          docker build -t ${IMAGE_TAG} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg VERSION=${SDK_VERSION} .
+          docker push ${IMAGE_TAG}
 
   publish-api:
     runs-on: ubuntu-latest
