--- a/environment.yaml
+++ b/environment.yaml
@@ -29,11 +29,8 @@
   k8s_config:
     name: id-dev
     cluster:
-      server: id-dev.k8s-cluster
-      insecure-skip-tls-verify: true
+      server: https://kubernetes.default.svc.cluster.local:443
+      certificate-authority-data: # Add in
     user:
-      exec:
-        apiVersion: client.authentication.k8s.io/v1beta1
-        command: gke-gcloud-auth-plugin
-        interactiveMode: IfAvailable
-        provideClusterInfo: true
+      client-certificate-data: # Add in
+      client-key-data: # Add in
