--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,32 @@ jobs:
           python setup.py sdist bdist_wheel
           twine upload dist/*
 
+  publish-python-sdk-docker:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+    needs:
+      - publish-python-sdk
+    steps:
+      - uses: actions/checkout@v2
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Merlin SDK Docker py${{ matrix.python-version }}
+        env:
+          CONTAINER_REGISTRY: ${{ env.DOCKER_REGISTRY }}/${{ github.repository }}
+        working-directory: ./python/sdk
+        run: |
+          IMAGE_TAG="${{ env.CONTAINER_REGISTRY }}/merlin-sdk:py${{ matrix.python-version }}-${{ inputs.version }}"
+          SDK_VERSION="$(sed 's/^v\(.*\)-/\1/' <<< "${{ inputs.version }}")"
+          docker build -t ${IMAGE_TAG} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg VERSION=${SDK_VERSION} .
+          docker push ${IMAGE_TAG}
+
   publish-api:
     runs-on: ubuntu-latest
     permissions:
@@ -100,7 +126,7 @@ jobs:
           docker image load --input merlin-pyspark-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
           docker tag merlin-pyspark-base-py${{ matrix.python-version }}:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
-  
+
   publish-pyfunc:
     runs-on: ubuntu-latest
     strategy:
