--- a/python/sdk/Dockerfile
+++ b/python/sdk/Dockerfile
@@ -10,5 +10,7 @@ RUN apt-get update && apt-get install build-essential curl vim wget -y
 
 COPY . .${WORKDIR}
 
+ARG VERSION
+
 RUN pip install merlin-sdk==${VERSION}
 RUN pip install merlin-sdk[test]==${VERSION}
