--- a/api/config/testdata/valid-imagebuilder-nodeselectors.yaml
+++ b/api/config/testdata/valid-imagebuilder-nodeselectors.yaml
@@ -1,3 +1,3 @@
 ImageBuilderConfig:
   NodeSelectors:
-    "cloud.google.com/gke-nodepool": image-build-job-node-pool
+    cloud.google.com/gke-nodepool: image-build-job-node-pool
