Add pip list for debugging

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -63,7 +63,6 @@ jobs:
       - name: Install dependencies
         working-directory: ./python/batch-predictor
         run: |
-          pip install --upgrade pip
           pip install pipenv
           make setup
       - name: Run batch-predictor test
@@ -96,7 +95,6 @@ jobs:
       - name: Install dependencies
         working-directory: ./python/pyfunc-server
         run: |
-          pip install --upgrade pip
           pip install pipenv
           make setup
       - name: Run pyfunc-server test
@@ -129,9 +127,9 @@ jobs:
       - name: Install dependencies
         working-directory: ./python/sdk
         run: |
-          pip install --upgrade pip
           pip install pipenv
           make setup
+          pip list
       - name: Unit test Python SDK
         env:
           E2E_USE_GOOGLE_OAUTH: false
