--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -129,7 +129,7 @@ jobs:
         run: |
           pip install pipenv
           make setup
-          pip list
+          pipenv run pip freeze
       - name: Unit test Python SDK
         env:
           E2E_USE_GOOGLE_OAUTH: false
