--- a/scripts/e2e/config/istio/clusterlocal-gateway.yaml
+++ b/scripts/e2e/config/istio/clusterlocal-gateway.yaml
@@ -9,31 +9,29 @@ autoscaling:
 
 resources:
   requests:
-    cpu: 50m
+    cpu: 25m
     memory: 64Mi
-  limits:
-    cpu: "1"
-    memory: 1Gi
+  limits: ~
 
 service:
   type: ClusterIP
   ports:
-  - port: 80
-    targetPort: 80
-    name: http2
-  - port: 443
-    name: https
-  - port: 31400
-    name: tcp
-  - port: 15011
-    targetPort: 15011
-    name: tcp-pilot-grpc-tls
-  - port: 8060
-    targetPort: 8060
-    name: tcp-citadel-grpc-tls
-  - port: 15030
-    targetPort: 15030
-    name: http2-prometheus
-  - port: 15032
-    targetPort: 15032
-    name: http2-tracing
+    - port: 80
+      targetPort: 80
+      name: http2
+    - port: 443
+      name: https
+    - port: 31400
+      name: tcp
+    - port: 15011
+      targetPort: 15011
+      name: tcp-pilot-grpc-tls
+    - port: 8060
+      targetPort: 8060
+      name: tcp-citadel-grpc-tls
+    - port: 15030
+      targetPort: 15030
+      name: http2-prometheus
+    - port: 15032
+      targetPort: 15032
+      name: http2-tracing
