--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -357,10 +357,10 @@ jobs:
   e2e-test:
     runs-on: ubuntu-latest
     needs:
-      - build-api
-      - build-batch-predictor
-      - build-pyfunc-server
-      - build-transformer
+      # - build-api
+      # - build-batch-predictor
+      # - build-pyfunc-server
+      # - build-transformer
       - create-version
     env:
       K3D_CLUSTER: merlin-cluster
@@ -389,14 +389,6 @@ jobs:
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-${{ hashFiles('Pipfile.lock') }}
-      - name: Download API Docker Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: merlin.${{ needs.create-version.outputs.version }}.tar
-      - name: Download Standard Transformer Docker Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
       - name: Download k3d
         run: |
           curl --silent --fail https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=v5.4.1 bash
@@ -404,28 +396,36 @@ jobs:
         run: |
           k3d registry create $LOCAL_REGISTRY --port $LOCAL_REGISTRY_PORT
           k3d cluster create $K3D_CLUSTER --image rancher/k3s:v1.25.9-k3s1 --k3s-arg '--disable=traefik,metrics-server@server:*' --port 80:80@loadbalancer
-      - name: Publish images to k3d registry
-        run: |
-          # Merlin API
-          docker image load --input merlin.${{ needs.create-version.outputs.version }}.tar
-          docker tag merlin:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }}
-          k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }} -c merlin-cluster
-
-          # Standard Transformer
-          docker image load --input  merlin-transformer.${{ needs.create-version.outputs.version }}.tar
-          docker tag merlin-transformer:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }}
-          k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }} -c merlin-cluster
       - name: Setup cluster
         working-directory: merlin/scripts/e2e
         run: ./setup-cluster.sh merlin-cluster ${{ env.INGRESS_HOST }}
-      - name: Deploy merlin and mlp
-        working-directory: merlin/scripts/e2e
-        run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.MERLIN_CHART_VERSION }}
-      - name: Run E2E Test
-        timeout-minutes: 30
-        id: run-e2e-test
-        working-directory: merlin/scripts/e2e
-        run: ./run-e2e.sh ${{ env.INGRESS_HOST }} ${{ env.E2E_PYTHON_VERSION }}
+      # - name: Download API Docker Artifact
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: merlin.${{ needs.create-version.outputs.version }}.tar
+      # - name: Download Standard Transformer Docker Artifact
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
+      # - name: Publish images to k3d registry
+      #   run: |
+      #     # Merlin API
+      #     docker image load --input merlin.${{ needs.create-version.outputs.version }}.tar
+      #     docker tag merlin:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }}
+      #     k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }} -c merlin-cluster
+
+      #     # Standard Transformer
+      #     docker image load --input  merlin-transformer.${{ needs.create-version.outputs.version }}.tar
+      #     docker tag merlin-transformer:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }}
+      #     k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }} -c merlin-cluster
+      # - name: Deploy merlin and mlp
+      #   working-directory: merlin/scripts/e2e
+      #   run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.MERLIN_CHART_VERSION }}
+      # - name: Run E2E Test
+      #   timeout-minutes: 30
+      #   id: run-e2e-test
+      #   working-directory: merlin/scripts/e2e
+      #   run: ./run-e2e.sh ${{ env.INGRESS_HOST }} ${{ env.E2E_PYTHON_VERSION }}
       - name: "Debug"
         if: always()
         continue-on-error: true
