Run merlin-e2e-test with kserve 0.9.0

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -357,10 +357,10 @@ jobs:
   e2e-test:
     runs-on: ubuntu-latest
     needs:
-      # - build-api
-      # - build-batch-predictor
-      # - build-pyfunc-server
-      # - build-transformer
+      - build-api
+      - build-batch-predictor
+      - build-pyfunc-server
+      - build-transformer
       - create-version
     env:
       K3D_CLUSTER: merlin-cluster
@@ -400,33 +400,33 @@ jobs:
       - name: Setup cluster
         working-directory: merlin/scripts/e2e
         run: ./setup-cluster.sh merlin-cluster ${{ env.INGRESS_HOST }}
-      # - name: Download API Docker Artifact
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: merlin.${{ needs.create-version.outputs.version }}.tar
-      # - name: Download Standard Transformer Docker Artifact
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
-      # - name: Publish images to k3d registry
-      #   run: |
-      #     # Merlin API
-      #     docker image load --input merlin.${{ needs.create-version.outputs.version }}.tar
-      #     docker tag merlin:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }}
-      #     k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }} -c merlin-cluster
+      - name: Download API Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin.${{ needs.create-version.outputs.version }}.tar
+      - name: Download Standard Transformer Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
+      - name: Publish images to k3d registry
+        run: |
+          # Merlin API
+          docker image load --input merlin.${{ needs.create-version.outputs.version }}.tar
+          docker tag merlin:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }}
+          k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin:${{ needs.create-version.outputs.version }} -c merlin-cluster
 
-      #     # Standard Transformer
-      #     docker image load --input  merlin-transformer.${{ needs.create-version.outputs.version }}.tar
-      #     docker tag merlin-transformer:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }}
-      #     k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }} -c merlin-cluster
-      # - name: Deploy merlin and mlp
-      #   working-directory: merlin/scripts/e2e
-      #   run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.MERLIN_CHART_VERSION }}
-      # - name: Run E2E Test
-      #   timeout-minutes: 30
-      #   id: run-e2e-test
-      #   working-directory: merlin/scripts/e2e
-      #   run: ./run-e2e.sh ${{ env.INGRESS_HOST }} ${{ env.E2E_PYTHON_VERSION }}
+          # Standard Transformer
+          docker image load --input  merlin-transformer.${{ needs.create-version.outputs.version }}.tar
+          docker tag merlin-transformer:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }}
+          k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }} -c merlin-cluster
+      - name: Deploy merlin and mlp
+        working-directory: merlin/scripts/e2e
+        run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.MERLIN_CHART_VERSION }}
+      - name: Run E2E Test
+        timeout-minutes: 30
+        id: run-e2e-test
+        working-directory: merlin/scripts/e2e
+        run: ./run-e2e.sh ${{ env.INGRESS_HOST }} ${{ env.E2E_PYTHON_VERSION }}
       - name: "Debug"
         if: always()
         continue-on-error: true
