--- a/scripts/e2e/config/kserve/overlay.yaml
+++ b/scripts/e2e/config/kserve/overlay.yaml
@@ -98,7 +98,7 @@ data:
         "tensorflow": {
             "image": "tensorflow/serving",
             "defaultImageVersion": "2.6.2",
-            "defaultGPUImageVersion": "2.6.2-gpu",
+            "defaultGpuImageVersion": "2.6.2-gpu",
             "defaultTimeout": "60",
             "supportedFrameworks": [
               "tensorflow"
@@ -153,7 +153,7 @@ data:
           "v1" : {
             "image": "kserve/torchserve-kfs",
             "defaultImageVersion": "0.5.3",
-            "defaultGPUImageVersion": "0.5.3-gpu",
+            "defaultGpuImageVersion": "0.5.3-gpu",
             "supportedFrameworks": [
               "pytorch"
             ],
@@ -162,7 +162,7 @@ data:
           "v2" : {
             "image": "kserve/torchserve-kfs",
             "defaultImageVersion": "0.5.3",
-            "defaultGPUImageVersion": "0.5.3-gpu",
+            "defaultGpuImageVersion": "0.5.3-gpu",
             "supportedFrameworks": [
               "pytorch"
             ],
